# NLPCC-2026-Shared-Task-11

./: CLAUDE.md  README.md  judge.py
data/test/Astronomy/DTARPS/: paper.md  rubrics.json
data/test/Astronomy/LightPred/: paper.md  rubrics.json
data/test/Astronomy/Superphot/: paper.md  rubrics.json
data/test/Astronomy/advancing-glitch-classification/: paper.md  rubrics.json
data/test/Astronomy/classifying-kepler-light/: paper.md  rubrics.json
data/test/Biology/CASCC/: paper.md  rubrics.json
data/test/Biology/IGEGRN/: paper.md  rubrics.json
data/test/Biology/scMAE/: paper.md  rubrics.json
data/test/Biology/scPML/: paper.md  rubrics.json
data/test/Chemistry/DataDTA/: paper.md  rubrics.json
data/test/Chemistry/HGTDP-DTA/: paper.md  rubrics.json
data/test/Chemistry/RetroKNN/: paper.md  rubrics.json
data/test/Chemistry/Retroformer/: paper.md  rubrics.json
data/test/Environment/RS3Mamba/: paper.md  rubrics.json
data/test/Environment/UNetMamba/: paper.md  rubrics.json
data/test/Environment/probing-the-limit/: paper.md  rubrics.json
data/test/Environment/remote-sensing/: paper.md  rubrics.json
data/test/ML/ALTER/: paper.md  rubrics.json
data/train_valid/AMUN/: paper.md
data/train_valid/Beyond-Ngram/: paper.md
data/train_valid/I0T/: paper.md  rubrics.json
data/train_valid/INCLINE/: paper.md  rubrics.json
data/train_valid/min-p/: paper.md  rubrics.json
example_repo/: .mcp.json
example_repo/.claude/: settings.local.json
example_repo/log/: actions.json
tools/: .gitigore  README.md  pyproject.toml  record_tools.py  test_mcp_server.py
(+261 files in other folders)
