[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcp-action-recorder"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["mcp"]

[project.scripts]
mcp-action-recorder = "record_tools:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
include = ["record_tools.py"]
